force-app/main/default/objects/BypassSettings__c/BypassSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Bypass settings</description>
    <label>Bypass Settings</label>
</CustomObject>