force-app/main/default/objects/BypassSettings__c/fields/IsBypassFlows__c.field-meta.xml
<CustomField>
    <fullName>IsBypassFlows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass setting for flows.</description>
    <inlineHelpText>Bypass setting for flows.</inlineHelpText>
    <label>Bypass Flows</label>
    <type>Checkbox</type>
</CustomField>