force-app/main/default/objects/BypassSettings__c/fields/IsBypassTriggers__c.field-meta.xml
<CustomField>
    <fullName>IsBypassTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass setting for triggers.</description>
    <inlineHelpText>Bypass setting for triggers.</inlineHelpText>
    <label>Bypass Triggers</label>
    <type>Checkbox</type>
</CustomField>