force-app/main/default/objects/BypassSettings__c/fields/IsBypassVR__c.field-meta.xml
<CustomField>
    <fullName>IsBypassVR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass setting for validation rules.</description>
    <inlineHelpText>Bypass setting for validation rules.</inlineHelpText>
    <label>Bypass VR</label>
    <type>Checkbox</type>
</CustomField>